# openslide

./: .gitignore  CMakeSettings.json  CmakeLists.txt  vcpkg.json
cmake/: FetchContent_MakeAvailable.cmake  Fetch_cairo.cmake  Fetch_doxygen.cmake  Fetch_gdkpixbuf.cmake  Fetch_glib.cmake  Fetch_iconv.cmake  Fetch_libjpeg-turbo.cmake  Fetch_libpng.cmake  Fetch_libtiff.cmake  Fetch_libxml2.cmake  Fetch_libzip.cmake  Fetch_openjpeg.cmake  Fetch_pixman.cmake  Fetch_sqlite.cmake  Fetch_zlib.cmake  toolchain-cross-mingw64-linux.cmake  toolchain-mingw64-windows.cmake
cmake/modules/: FindCairo.cmake  FindGDKPixBuf.cmake
doc/: CMakeLists.txt
src/: CMakeLists.txt
tools/: CMakeLists.txt  hello.cpp
